# first-fork

./: .gitignore  CONSTITUTION.md  Cargo.toml  HANDOFF.md  HANDOFF_FOR_CRATONCTL.md  README.md  config.example.toml
.gemini/: settings.json
.github/: copilot-instructions.md  mcp-config.json
deploy/: cratond.service
docs/: cratonctl.md  deploy.md
docs/architecture/: ARCHITECTURE.md
docs/design/: CRATONCTL_DESIGN.md
docs/handoffs/: HANDOFF.md
docs/orchestrator/: HANDOFF_FOR_CRATON_ORCHESTRATOR.md  PROMPT_FOR_CRATON_ORCHESTRATOR.md
scripts/: deploy.ps1  install-remote.sh
src/: breaker.rs  config.rs  graph.rs  history.rs  http.rs  lease.rs  log.rs  main.rs  model.rs  notify.rs  persist.rs  reduce.rs  runtime.rs  schedule.rs  signal.rs  state.rs
src/cratonctl/: auth.rs  cli.rs  client.rs  dto.rs  error.rs  init.rs  mod.rs  output.rs
src/effect/: aibridge.rs  disk.rs  exec.rs  incident.rs  mod.rs  probe.rs  systemd.rs  updates.rs
src/policy/: backup.rs  disk.rs  mod.rs  recovery.rs
