[package]
name = "cratond"
version = "0.1.0"
edition = "2021"
description = "Craton Infrastructure Daemon — autonomous server management"
license = "MIT"
default-run = "cratond"

[[bin]]
name = "cratond"
path = "src/main.rs"

[[bin]]
name = "cratonctl"
path = "src/bin/cratonctl.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
libc = "0.2"
signal-hook = "0.3"
tiny_http = "0.12"
sha2 = "0.10"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = { level = "deny" }
expect_used = { level = "warn" }
